test: add unit, e2e and integration tests